# using-fake-lidar-for-odometry-of-rtabmap

./: README.md
laser_scan_matcher/demo/: demo_gmapping.launch
openni2_camera/openni2_camera/src/: list_devices.cpp
openni2_camera/openni2_launch/launch/includes/: device.launch.xml
otonom/: CMakeLists.txt  package.xml
otonom/src/: teleop.cpp
pointcloud_to_laserscan/: CHANGELOG.rst  CMakeLists.txt  package.xml
pointcloud_to_laserscan/include/pointcloud_to_laserscan/: frame_publisher.h
pointcloud_to_laserscan/launch/: cob4_test_launch_node.launch  nodelet.launch  sample_node.launch
pointcloud_to_laserscan/src/: frame_publisher.cpp  frame_publisher_node.cpp  ipa_pointcloud_to_laserscan_nodelet.cpp  pointcloud_to_laserscan_nodelet.cpp  roi_outlier_removal_nodelet.cpp
pose2d_to_odom/: CMakeLists.txt  package.xml
pose2d_to_odom/launch/: start.launch  stream.launch  stream.launch.save
pose2d_to_odom/src/: main.cpp
rtabmap_ros/launch/: custom_rtabmap.launch  rtabmap.launch  rtabmap_hand.launch  rtabmap_hand.launch.xml
rtabmap_ros/launch/demo/: demo_hector_mapping.launch
